Perkin-UAT/force-app/main/default/objects/PriceBookMapping__c/PriceBookMapping__c.object-meta.xml
<CustomObject>
    <label>Price Book Mapping</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>PriceBookMappingRef</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Book Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>