Perkin-UAT/force-app/main/default/objects/PriceBookMapping__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>Used in QS3 Integration</description>
    <label>PB Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>