Perkin-UAT/force-app/main/default/objects/PriceBookMapping__c/fields/PriceBook__c.field-meta.xml
<CustomField>
    <fullName>PriceBook__c</fullName>
    <description>Price Book Name</description>
    <label>Price Book</label>
    <length>50</length>
    <type>Text</type>
</CustomField>