Perkin-UAT/force-app/main/default/objects/PriceBookMapping__c/fields/SAP_PLType_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_PLType_Code__c</fullName>
    <description>This field is created to provide the information about SAP PLType Code by GTA team.</description>
    <label>SAP PLType Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>