Perkin-UAT/force-app/main/default/objects/PriceBookMapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SAP_PLType_Code__c</columns>
    <columns>PLTypeCode__c</columns>
    <columns>PriceBook__c</columns>
    <columns>Currency__c</columns>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PLTypeCode__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>